# commit-msg-hook

./: .gitignore  .hgtags  .pre-commit-hooks.yaml  CODEOWNERS  LICENSE  README.md  commit-msg-hook.py  setup.cfg  setup.py
src/main/: cli.py  color.py  logic.py  run.py
