[metadata]
name = commit-msg-hook
version = 0.2.4
author = Dima Karpukhin
author_email = dimaka87@wix.com
description = Checks if commit message matches the chaos-hub commit rules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimaka-wix/commit-msg-hook.git
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    commit-msg-hook = main.cli:main